Modified default layout: top bar is now fixed (follows the scroll bar), toolbar consolidated into actions menu, item details accordion replaced with metadata menu, metadata hidden by default.

--- a/deme_django/static/stylesheets/base.css
+++ b/deme_django/static/stylesheets/base.css
@@ -74,7 +74,12 @@ div.title img {
     vertical-align: middle;
 }
 
-
+div.metadata_content {
+    border: thin solid #888;
+    background: #eee;
+    margin-top: 5px;
+    padding: 10px;
+}
 
 
 
